testdata/bad/comma.ion
// Comma is not a valid operator character.
,
